--- a/education.html
+++ b/education.html
@@ -58,13 +58,13 @@
         <img>
       </div>
     </section>
+    <div class="row text-center">
+      <a class="btn btn-secondary" href="index.html">Home</a>
 <footer class="container">
       <div class="row">
         <p class="col-sm-4">&copy;2020 KitFox Pottery</p>
         <div class="col-sm-2"><a href="https://medium.com/">Medium</a></div>
         <div class="col-sm-2"><a href="https://github.com/">Github</a></div>
-        <div class="col-sm-2"><a href="https://www.linkedin.com/">LinkedIn</a></div>
-        <div class="col-sm-2"><a href="https://tunein.com/podcasts/">Podcast</a></div>
       </div><!--Change the links and content to applicable topics-->
     </footer>
 
