--- a/experience.html
+++ b/experience.html
@@ -47,13 +47,14 @@
 <!--<img src="..."> Personal Image-->
       
         <p class="font-weight-bold">I studied Graphic Design and then later, Fine Art Ceramics, at RIT and SUNY Fredonia, respectively. Growing up in Upstate New York, there is a sense of function and purpose that pervades daily life. We have to have things that work and are susbstatial enough to weather being thrown around. I enjoy to produce items, to craft, of particular use, strength, and subtle beauty. My vessels are designed to be used daily and are dishwasher and microwave safe unless otherwise noted. I hope that all my creations come to be appreceated and used for many generations. Enjoy!</p>
+    <div class="row text-center">
+      <a class="btn btn-secondary" href="index.html">Home</a>
+    
     <footer class="container">
       <div class="row">
         <p class="col-sm-4">&copy;2020 KitFox Pottery</p>
         <div class="col-sm-2"><a href="https://medium.com/">Medium</a></div>
         <div class="col-sm-2"><a href="https://github.com/">Github</a></div>
-        <div class="col-sm-2"><a href="https://www.linkedin.com/">LinkedIn</a></div>
-        <div class="col-sm-2"><a href="https://tunein.com/podcasts/">Podcast</a></div>
       </div><!--Change the links and content to applicable topics-->
     </footer>
 
