--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
           <h3></h3>
         </div>
       </section>
+    <div class="row text-center">
+      <a class="btn btn-secondary" href="index.html">Home</a>
     <footer class="container">
       <div class="row">
         <p class="col-sm-4">&copy;2020 KitFox Pottery</p>
         <div class="col-sm-2"><a href="https://instagram.com/">Instagram</a></div>
-        <div class="col-sm-2"><a href="https://github.com/">Github</a></div>        </div>
+        <div class="col-sm-2"><a href="https://github.com/">Github</a></div>       
+      </div>
         </footer>
     
   </body>
